[package]
name = "twincat"
version = "0.2.0"
edition = "2021"
description = "TwinCAT ADS tools"
keywords = ["Beckhoff", "TwinCAT", "ADS", "Structured-Text"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/becky112358/twincat"

[build-dependencies]
bindgen = "0.70.1"

[dependencies]
strum = "0.26.3"
strum_macros = "0.26.4"
twincat_derive = { path = "../twincat_derive", version = "0.1.0" }
zerocopy = "0.8.10"
