[package]
name = "twincat_derive"
version = "0.1.0"
edition = "2021"
description = "TwinCAT ADS macro derivations"
keywords = ["Beckhoff", "TwinCAT", "ADS", "Structured-Text"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/becky112358/twincat"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
